[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Dmitrii", email = "dimalazarevne@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0.0", 
]
